--- a/cloud-api-gateway/src/main/resources/application.yaml
+++ b/cloud-api-gateway/src/main/resources/application.yaml
@@ -1,8 +1,16 @@
 server:
   port: 8999
+
 eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+
+
 spring:
   application:
     name: api-gateway
@@ -13,8 +21,36 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/user/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: user-service
+                fallbackuri: forward:/userServiceFallback
+
+
         - id: contact-service
           uri: lb://contact-service
           predicates:
             - Path=/contact/**
-       
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: contact-service
+                fallbackuri: forward:/contactServiceFallback
+
+
+
+hystrix:
+  command:
+    fallbackcmd:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 5000
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
