--- a/cloud-config-server/src/main/resources/application.yaml
+++ b/cloud-config-server/src/main/resources/application.yaml
@@ -11,11 +11,21 @@ spring:
           uri: https://github.com/Rahul-Chauhan-2212/config-server.git
           cloneOnStart: true
           defaultLabel: main
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    serviceUrl:
+#      defaultZone: http://localhost:8760/eureka/
+#  instance:
+#    hostname: localhost
 eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8760/eureka/
   instance:
-    hostname: localhost
+    preferIpAddress: true
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8760/eureka
+    
