--- a/contacts-service/src/main/resources/application.yaml
+++ b/contacts-service/src/main/resources/application.yaml
@@ -3,3 +3,12 @@ server:
 spring:
   application:
     name: contact-service
+eureka:
+  instance:
+    preferIpAddress: true
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8760/eureka
