--- a/hystrix-dashboard/src/main/resources/application.yaml
+++ b/hystrix-dashboard/src/main/resources/application.yaml
@@ -6,3 +6,12 @@ spring:
 hystrix:
   dashboard:
     proxyStreamAllowList: "*"
+eureka:
+  instance:
+    preferIpAddress: true
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8760/eureka
