--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -86,6 +86,7 @@
 					<repository>rchauhan9102/eureka-server</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+					<skip>${skipDocker}</skip>
 				</configuration>
 				<dependencies>
 					<!-- To make this work for JAVA above JDK9+ -->
