--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.api.gateway</groupId>
-	<artifactId>cloud-api-gateway</artifactId>
+	<artifactId>api-gateway</artifactId>
 	<version>0.0.1</version>
-	<name>cloud-api-gateway</name>
+	<name>api-gateway</name>
 	<description>API Gateway</description>
 	<properties>
 		<java.version>11</java.version>
@@ -101,6 +101,7 @@
 					<repository>rchauhan9102/api-gateway</repository>
 					<tag>${project.version}</tag>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+					<skip>${skipDocker}</skip>
 				</configuration>
 				<dependencies>
 					<!-- To make this work for JAVA above JDK9+ -->
