--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ eureka:
   server: 
     waitTimeInMsWhenSyncEmpty: 0
   instance:
-    hostname: "${HOSTNAME}.eureka"
+    hostname: "localhost"
+  #hostname: "${HOSTNAME}.eureka"
   serviceUrl:
       defaultZone: ${EUREKA_SERVER_ADDRESS}
