--- a/.github/workflows/docker-hub-workflow.yml
+++ b/.github/workflows/docker-hub-workflow.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up OpenJDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'corretto'
           java-version: '11'
           cache: 'maven'
       - name: Disable Maven Security
