--- a/api-gateway/src/main/resources/bootstrap.yaml
+++ b/api-gateway/src/main/resources/bootstrap.yaml
@@ -2,4 +2,4 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http://localhost:9296
+      uri: ${SPRING_CLOUD_CONFIG_URI:http://localhost:9296}
