--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -14,11 +14,33 @@ spring:
 eureka:
   instance:
     preferIpAddress: true
-    hostname: eureka-0
+    hostname: localhost
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8760/eureka
-      #defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8760/eureka
+---
+spring:
+  config:
+    activate:
+      on-profile: kubernetes
+  cloud:
+    config:
+      server:
+        git:
+          uri: "https://github.com/Rahul-Chauhan-2212/config-server.git"
+          cloneOnStart: true
+          defaultLabel: main
+          searchPaths: "kubernetes"
+eureka:
+  instance:
+    preferIpAddress: true
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8760/eureka}
+
     
