--- a/.github/workflows/docker-hub-workflow.yml
+++ b/.github/workflows/docker-hub-workflow.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up OpenJDK 11
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
