--- a/.github/workflows/docker-hub-workflow.yml
+++ b/.github/workflows/docker-hub-workflow.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         app: [ api-gateway, config-server, contact-service, eureka-server, hystrix-dashboard, user-service ]
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -22,6 +23,7 @@ jobs:
           distribution: 'corretto'
           java-version: '11'
           cache: 'maven'
+
       - name: Disable Maven Security
         run: |
           mkdir -p ~/.m2
@@ -30,11 +32,19 @@ jobs:
       - name: Build Application (${{ matrix.app }})
         run: mvn -f ${{ matrix.app }}/pom.xml clean package -DskipTests -DskipDocker=true
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Image (${{ matrix.app }})
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.app }}:latest ${{ matrix.app }}
-
-      - name: Push Docker Image (${{ matrix.app }})
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.app }}:latest
+      - name: Build and Push Multi-Arch Image (${{ matrix.app }})
+        uses: docker/build-push-action@v4
+        with:
+          context: ${{ matrix.app }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.app }}:latest
+          platforms: linux/amd64,linux/arm64
